.argocd-state/authentik/authentik/templates/server/metrics.yaml
---
# Source: authentik/templates/server/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server-metrics
  namespace: "authentik"
  labels:
    helm.sh/chart: "authentik-2026.8.3"
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/instance: "authentik"
    app.kubernetes.io/component: "server-metrics"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/part-of: "authentik"
    app.kubernetes.io/version: "2026.8.3"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    protocol: TCP
    port: 9300
    targetPort: metrics
  selector:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/instance: "authentik"
    app.kubernetes.io/component: "server"
